--- a/css/style.css
+++ b/css/style.css
@@ -11594,6 +11594,23 @@ h1, h2, h3, h4, h5,
   letter-spacing: 3px;
   text-transform: uppercase;
 }
+.resume-wrap .keyword:link, .resume-wrap .keyword:visited {
+  color: #999999;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inline-block;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+}
+.resume-wrap .keyword:hover, .resume-wrap .keyword:active {
+  color: #ffbd39;
+  -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+          box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+  -webkit-transform: rotate(5deg) scale(1.3);
+      -ms-transform: rotate(5deg) scale(1.3);
+          transform: rotate(5deg) scale(1.3);
+}
 
 .services-1 {
   margin-bottom: 40px;
