--- a/scss/bootstrap/bootstrap.scss
+++ b/scss/bootstrap/bootstrap.scss
@@ -16,6 +16,7 @@
 @import "grid";
 @import "tables";
 @import "forms";
+@import "form";
 @import "buttons";
 @import "transitions";
 @import "dropdown";
