--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2344,3 +2344,73 @@ url(../img/nat-10.jpg);
         }
     }
 }
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:600');
+
+@keyframes short-press {
+  0% {
+    transform: scale(1);
+  }
+  
+  50% {
+    transform: scale(.9);
+  }
+  
+  100% {
+    transform: scale(1);
+  }
+}
+
+
+
+
+.submit-button {
+  display: block;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: .75em;
+  letter-spacing: 1px;
+  height: 38px;
+  width: 120px;
+  line-height: 38px;
+  overflow: hidden;
+  background: #4dbecf;
+  border-radius: 3px;
+  box-shadow: 0 15px 30px rgba(black,.1);
+  border: 0;
+  cursor: pointer;
+  transition: all .3s ease;
+  
+  &:hover,
+  &:focus {
+    box-shadow: 0 5px 15px rgba(black,.1);
+  }
+  
+  &.animated {
+    animation: .75s short-press cubic-bezier(0.770, 0.000, 0.175, 1.000) forwards;
+  }
+  
+  > span {
+    display: block;
+    color: white;
+    text-align: center;
+    
+    &.pre-state-msg {
+      transition: all .7s cubic-bezier(0.770, 0.000, 0.175, 1.000);
+      transition-delay: .75s;
+    }
+  }
+  
+  &.state-1 {
+    .pre-state-msg {
+      margin-top: -38px;
+    }
+  }
+  
+  &.state-2 {
+    .pre-state-msg {
+      margin-top: -76px;
+    }
+  }
+}
