--- a/css/style.css
+++ b/css/style.css
@@ -12866,8 +12866,6 @@ html, body {
   display: -ms-grid;
   display: grid;
   grid-gap: 1.6rem;
-  padding: 1.6rem;
-  max-width: 1024px;
   margin: 0 auto;
   font-family: var(--font-sans);
 }
@@ -12885,6 +12883,7 @@ html, body {
 }
 
 .card {
+  margin-bottom: 30px;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -12944,19 +12943,15 @@ html, body {
   transition: transform calc(var(--d) * 2) var(--e), -webkit-transform calc(var(--d) * 2) var(--e);
 }
 .card:nth-child(1):before {
-  background-image: url(https://images.unsplash.com/photo-IOM2.jpg?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
   background-image: url("../images/IOM2.jpg");
 }
 .card:nth-child(2):before {
-  background-image: url(https://images.unsplash.com/photo-SEABEX2.jpg?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
   background-image: url("../images/SEABEX2.jpg");
 }
 .card:nth-child(3):before {
-  background-image: url(https://images.unsplash.com/photo-tunisianrecipes2.jpg?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
   background-image: url("../images/tunisianrecipes2.jpg");
 }
 .card:nth-child(4):before {
-  background-image: url(https://images.unsplash.com/photo-sppedbump3.jpg?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
   background-image: url("../images/sppedbump3.jpg");
 }
 
@@ -12986,14 +12981,14 @@ html, body {
 }
 
 .title {
-  font-size: 1.3rem;
+  font-size: 1.8rem;
   font-weight: bold;
   line-height: 1.2;
 }
 
 .copy {
   font-family: var(--font-serif);
-  font-size: 1.125rem;
+  font-size: 1.4rem;
   font-style: italic;
   line-height: 1.35;
 }
