changing icon generate folder from flatIcon and replace IT

--- a/css/flaticon.css
+++ b/css/flaticon.css
@@ -36,10 +36,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.flaticon-ideas:before { content: "\f100"; }
-.flaticon-flasks:before { content: "\f101"; }
-.flaticon-analysis:before { content: "\f102"; }
-.flaticon-ux-design:before { content: "\f103"; }
-.flaticon-web-design:before { content: "\f104"; }
-.flaticon-idea:before { content: "\f105"; }
-.flaticon-innovation:before { content: "\f106"; }
+.flaticon-computer-graphic:before { content: "\f100"; }
+.flaticon-web:before { content: "\f101"; }
+.flaticon-code:before { content: "\f102"; }
+.flaticon-code-1:before { content: "\f103"; }
+.flaticon-file-storage:before { content: "\f104"; }
+.flaticon-price-tag:before { content: "\f105"; }
+.flaticon-linkedin:before { content: "\f106"; }
