--- a/fonts/flaticon/font/_flaticon.scss
+++ b/fonts/flaticon/font/_flaticon.scss
@@ -1,6 +1,6 @@
     /*
     Flaticon icon font: Flaticon
-    Creation date: 20/03/2019 02:18
+    Creation date: 28/03/2020 23:45
     */
 
     @font-face {
@@ -37,18 +37,18 @@
   font-smoothing: antialiased;
     }
 
-    .flaticon-ideas:before { content: "\f100"; }
-.flaticon-flasks:before { content: "\f101"; }
-.flaticon-analysis:before { content: "\f102"; }
-.flaticon-ux-design:before { content: "\f103"; }
-.flaticon-web-design:before { content: "\f104"; }
-.flaticon-idea:before { content: "\f105"; }
-.flaticon-innovation:before { content: "\f106"; }
+    .flaticon-computer-graphic:before { content: "\f100"; }
+.flaticon-web:before { content: "\f101"; }
+.flaticon-code:before { content: "\f102"; }
+.flaticon-code-1:before { content: "\f103"; }
+.flaticon-file-storage:before { content: "\f104"; }
+.flaticon-price-tag:before { content: "\f105"; }
+.flaticon-linkedin:before { content: "\f106"; }
     
-    $font-Flaticon-ideas: "\f100";
-    $font-Flaticon-flasks: "\f101";
-    $font-Flaticon-analysis: "\f102";
-    $font-Flaticon-ux-design: "\f103";
-    $font-Flaticon-web-design: "\f104";
-    $font-Flaticon-idea: "\f105";
-    $font-Flaticon-innovation: "\f106";
+    $font-Flaticon-computer-graphic: "\f100";
+    $font-Flaticon-web: "\f101";
+    $font-Flaticon-code: "\f102";
+    $font-Flaticon-code-1: "\f103";
+    $font-Flaticon-file-storage: "\f104";
+    $font-Flaticon-price-tag: "\f105";
+    $font-Flaticon-linkedin: "\f106";
