fix carousel mobile scroll
 repalce float -with inline block + z-index -1

--- a/css/style.css
+++ b/css/style.css
@@ -11212,6 +11212,9 @@ h1, h2, h3, h4, h5,
 }
 .owl-carousel .owl-item {
   opacity: 0.4;
+  float: none;
+  display: inline-block;
+  z-index: -1;
 }
 .owl-carousel .owl-item.active {
   opacity: 1;
