--- a/scss/style.scss
+++ b/scss/style.scss
@@ -368,6 +368,9 @@ h1, h2, h3, h4, h5,
 	position: relative;
 	.owl-item {
 		opacity: .4;
+		float: none ;
+		display: inline-block;
+		z-index: -1 ;
 		&.active {
 			opacity: 1;
 		}
