reponsive contact form

--- a/css/style.css
+++ b/css/style.css
@@ -13091,9 +13091,33 @@ html, body {
   -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
 }
+@media only screen and (max-width: 75em) {
+  .book {
+    background-image: -o-linear-gradient(345deg, rgba(255, 255, 255, 0.9) 0%, rgba(153, 153, 153, 0.9) 65%, transparent 65%), url(../images/contactImage.jpg);
+    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(153, 153, 153, 0.9) 65%, transparent 65%), url(../images/contactImage.jpg);
+    background-size: cover;
+  }
+}
+@media only screen and (max-width: 56.25em) {
+  .book {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.9)), to(rgba(153, 153, 153, 0.9))), url(../images/contactImage.jpg);
+    background-image: -o-linear-gradient(left, rgba(255, 255, 255, 0.9) 0%, rgba(153, 153, 153, 0.9) 100%), url(../images/contactImage.jpg);
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(153, 153, 153, 0.9) 100%), url(../images/contactImage.jpg);
+  }
+}
 .book__form {
   width: 50%;
   padding: 6rem;
+}
+@media only screen and (max-width: 75em) {
+  .book__form {
+    width: 65%;
+  }
+}
+@media only screen and (max-width: 56.25em) {
+  .book__form {
+    width: 100%;
+  }
 }
 
 @-webkit-keyframes short-press {
