--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2094,7 +2094,7 @@ textarea.form-control {
 @import url('https://fonts.googleapis.com/css?family=Cardo:400i|Rubik:400,700&display=swap');
 
 // $imageIds: '1517021897933-0e0319cfbc28', '1533903345306-15d1c30952de', '1545243424-0ce743321e11', '1531306728370-e2ebd9d7bb99';
-$imageIds : 'IOM2.jpg', 'SEABEX2.jpg', 'tunisianrecipes2.jpg', 'sppedbump3.jpg';
+$imageIds : 'wadapp.PNG', 'SEABEX2.jpg', 'tunisianrecipes2.jpg', 'sppedbump3.jpg';
 $bpmd: 600px;
 $bplg: 800px;
 
